--- a/团队管理.md
+++ b/团队管理.md
@@ -1,46 +1,43 @@
 团队概述【团队的内涵】
-团队的概念：
-团队是有员工和管理层组成的一个共同体，该共同体合理利用每一个成员的知识和技能协同工作，通过产生积极的协同作用解决问题，并达到共同的目标。
-1、有员工、管理层
-2、各有所长
-3、解决问题、达成目标
+  团队的概念：
+  团队是有员工和管理层组成的一个共同体，该共同体合理利用每一个成员的知识和技能协同工作，通过产生积极的协同作用解决问题，并达到共同的目标。
+  1、有员工、管理层
+  2、各有所长
+  3、解决问题、达成目标
 
 团队的构成要素（5P）：
-目标（purpose）
-人员(people) 人员最重要、灵活
-计划(plan)
-定位(place)
-权限(power)
+  目标（purpose）
+  人员(people) 人员最重要、灵活
+  计划(plan)
+  定位(place)
+  权限(power)
 
 团队特征：（互相依赖、有责任、积极主动、信任沟通、个人发展、冲突、成员参与决策、分享机制）
 
 重新抉择，激发医学
 
-积极或者消极的冲突
-充分信任沟通
-参与到团队的决策之中
-责任人感和归属感
-
-积极性与主动性
-将自己的发展融入到团队的事业
-团队成员互相依赖
-团度是有效的学习型群体
+  积极或者消极的冲突
+  充分信任沟通
+  参与到团队的决策之中
+  责任人感和归属感
+  
+  积极性与主动性
+  将自己的发展融入到团队的事业
+  团队成员互相依赖
+  团度是有效的学习型群体
 
 
 团队概述【团队的类型】
-工作团体：
-两个或两个以上的人员为达到一定的目标而聚集在一起，构成一个特定的群体
+工作团体：两个或两个以上的人员为达到一定的目标而聚集在一起，构成一个特定的群体
 
 
 团队与工作团体的区别：
 
 
-
 传统团队的分类：正式团队、非正式团队
-
-正式团队：由管理者创立起来的，负有完成特定任务以达成组织目标的职责
-最普遍的正式团队是命令团队和委员会
-临时性正式团队是任务团队和项目团队
+  正式团队：由管理者创立起来的，负有完成特定任务以达成组织目标的职责
+  最普遍的正式团队是命令团队和委员会
+  临时性正式团队是任务团队和项目团队
 
 
 非正式团队： 产生与人们之间的项目交往和互相联系，是在正式组织结构内部发展起来的
@@ -48,19 +45,18 @@
 1924年 9年 霍桑实验
 
 目标分类
-
-职能型团队（工作改进、解决具体问题）
-问题解决型团队（5-12个计时工作的雇员）
-自我管理型团队（5-30名成员）
-职能交叉型团队（同一职能层级但又处于不同业务领域）
-虚拟团队
+  职能型团队（工作改进、解决具体问题）
+  问题解决型团队（5-12个计时工作的雇员）
+  自我管理型团队（5-30名成员）
+  职能交叉型团队（同一职能层级但又处于不同业务领域）
+  虚拟团队
 
 
 其他分类
-生产/服务型团队
-行动谈判型团队
-项目/开发型团队
-建议顾问型团队
+  生产/服务型团队
+  行动谈判型团队
+  项目/开发型团队
+  建议顾问型团队
 
 
 
@@ -75,71 +71,70 @@
 
 
 团队产生的背景原因
-1、企业外部竞争加剧
-2、对管理的差异化需求
-3、工作生活质量运动的结果
-4、其他原因
-从管理的观点来看，提高生产力是打多公司引入团队制度的主因
+  1、企业外部竞争加剧
+  2、对管理的差异化需求
+  3、工作生活质量运动的结果
+  4、其他原因
+  从管理的观点来看，提高生产力是打多公司引入团队制度的主因
 
 团队发展的生命周期
-成立阶段（清楚本团队能够达到的组织意愿）
-震荡阶段（沟通和磨合是震荡阶段的最重要的主题）
-规范阶段（组织建立团队文化的最有利时机）
-高产阶段（自由分享组织的信息）
-调整阶段（总结团队经验）
+  成立阶段（清楚本团队能够达到的组织意愿）
+  震荡阶段（沟通和磨合是震荡阶段的最重要的主题）
+  规范阶段（组织建立团队文化的最有利时机）
+  高产阶段（自由分享组织的信息）
+  调整阶段（总结团队经验）
 
 团队概述【团队的凝聚力和团队的作用】
-
+  
 团队凝聚力是指团队成员之间相互吸引并愿意留在团队中，为团队承担义务的强烈程度
-相互吸引
-愿意留在团队
-为团队承担义务
+  相互吸引
+  愿意留在团队
+  为团队承担义务
 
 影响因素
-1、目标的一致性与可实现性
-2、成员的相处时间
-3、团队的规模
-4、加入团队的难度
-5、团队的外部压力
-6、团队的地位、声望和成功经验
-7、成员之间的沟通
+  1、目标的一致性与可实现性
+  2、成员的相处时间
+  3、团队的规模
+  4、加入团队的难度
+  5、团队的外部压力
+  6、团队的地位、声望和成功经验
+  7、成员之间的沟通
 
 团队凝聚力的作用：
 激战精灵、慢速生成
-1、由利于创造团队精神，改善沟通状况
-2、有利于高层管理这进行战略思考
-3、有利于提高决策速度和决策质量
-4、提高组织的整体工作绩效和生产率水平
-5、提高员工的积极性和工作满意度
-6、有利于员工对团队目标的共同承诺
-7、有利于拓展员工工作技能
-8、有利于增强组织的灵活性
+  1、由利于创造团队精神，改善沟通状况
+  2、有利于高层管理这进行战略思考
+  3、有利于提高决策速度和决策质量
+  4、提高组织的整体工作绩效和生产率水平
+  5、提高员工的积极性和工作满意度
+  6、有利于员工对团队目标的共同承诺
+  7、有利于拓展员工工作技能
+  8、有利于增强组织的灵活性
 
 
 
 
 团队建设【团队建设概述】
 
-团队建设的概念
-在企业管理中有计划、有目的的组织团队，并对团队成员进行训练、总结、提高，以达到其最终目标的活动
+团队建设的概念：在企业管理中有计划、有目的的组织团队，并对团队成员进行训练、总结、提高，以达到其最终目标的活动
 
 团队建设的意义
-1、产生大于个人绩效之和的整体效应
-2、提高企业组织的灵活性
-3、提高组织的凝聚力
-4、为成员成长创造有利条件
+  1、产生大于个人绩效之和的整体效应
+  2、提高企业组织的灵活性
+  3、提高组织的凝聚力
+  4、为成员成长创造有利条件
 
 
 高效团队的特征
-互相依赖、有责任、积极主动、沟通信任、个人发展、冲突、成员参与决策、分享机制
-明确的目标、
-相关的技能、
-相互间的信任（有效团队的显著特征）
-一致性承诺
-良好的沟通
-谈判的技能
-合适的领导
-内部与外部的支持
+  互相依赖、有责任、积极主动、沟通信任、个人发展、冲突、成员参与决策、分享机制
+  明确的目标、
+  相关的技能、
+  相互间的信任（有效团队的显著特征）
+  一致性承诺
+  良好的沟通
+  谈判的技能
+  合适的领导
+  内部与外部的支持
 
 
 
